# node-keycloak-autosetup

./: Dockerfile  README.md  pyproject.toml
assets/: flame-client.json
docker/: docker-compose.dev.yml  docker-compose.yml  entrypoint.sh
k8s/: README.md  keycloak-deployment.yaml  keycloak-service.yaml
project/: main.py
project/templates/: client.json  client.json.tmpl  realm.json  realm.json.tmpl
